# nexa-gauge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGACY.md  LICENSE  Makefile  PR.md  README.md  SECURITY.md  TODO.md  latency.md  nodes.md  notes.md  plan.md  pyproject.toml  sample.json  setup.sh
.github/workflows/: ci.yml  publish.yml  release-automerge.yml  release.yml
apps/lumiseval-api/: pyproject.toml
apps/lumiseval-api/lumiseval_api/: main.py
apps/lumiseval-api/lumiseval_api/cli/: estimate.py  run.py  util.py
apps/lumiseval-api/test_lumiseval_api/: test_llm_cli_interface.py  test_local_adapter_streaming.py
apps/lumiseval-cli/: pyproject.toml
apps/lumiseval-cli/lumiseval_cli/: main.py
apps/lumiseval-cli/lumiseval_cli/adapters/: huggingface.py  local_file.py
apps/lumiseval-cli/lumiseval_cli/cli/: estimate.py  run.py  util.py
apps/lumiseval-cli/test_lumiseval_cli/: test_llm_cli_interface.py  test_local_adapter_streaming.py
apps/nexagauge-api/: pyproject.toml
apps/nexagauge-api/nexagauge_api/: main.py
apps/nexagauge-api/nexagauge_api/cli/: estimate.py  run.py  util.py
apps/nexagauge-api/test_lumiseval_api/: test_llm_cli_interface.py  test_local_adapter_streaming.py
apps/nexagauge-apps/ng_cli/: delete.py  estimate.py  main.py  run.py  util.py
apps/nexagauge-apps/test_apps/test_ng_cli/: test_llm_cli_interface.py
docs/: architecture.md  cli-code-flow.md  execution-model.md  get-started.md
scripts/: run_graph.py
scripts/count_tokens/claims/: count_generation_claims_cost.py
scripts/count_tokens/grounding/: grounding_metrics.py
scripts/count_tokens/relevance/: count_relevance_metrics_cost.py
